<resources>
    <string name="app_name">Garden User</string>
    <string name="textfullname">Full Name*</string>
    <string name="textfullnamemarathi">Full Name in Marathi</string>
    <string name="textmobile">Mobile No.*</string>
    <string name="textemail">Email-ID*</string>
    <string name="textaddress">Address*</string>
    <string name="textaddressmarathi">Address in Marathi</string>
    <string name="textusername">Username</string>
    <string name="textpassword">Password</string>
    <string name="textconfirmpassword">Confirm Password</string>
    <string name="textlogin">Login</string>
    <string name="text_forgot_password">forgot password ?</string>
    <string name="text_no_account">Don\'t have an account ?</string>
    <string name="text_already_account">Already have an account ?</string>
    <string name="text_sign_up">Sign up</string>
    <string name="textSignin">Sign in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_my_application">My Applications</string>
    <string name="title_profile">Profile</string>
    <string name="title_setting">Setting</string>
    <string name="title_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_change_profile">Change Profile</string>
    <string name="text_appid">#123456789</string>
    <string name="status_completed">Completed</string>
    <string name="text_application">Application</string>
    <string name="text_trimingofbranches">Trimming of Branches</string>
    <string name="text_application_date">Application Date</string>
    <string name="text_date">01 July 2020</string>
    <string name="text_completed_date">Completed Date</string>
    <string name="text_download_certificate">Download Certificate</string>
    <string name="text_view_receipt">View Receipt</string>
    <string name="text_date2">01/07/2020</string>
    <string name="text_expected_completion">Expected Completion Date</string>
    <string name="text_service_name">Service Name</string>
    <string name="text_status">Status</string>
    <string name="text_application_details">Application Details</string>
    <string name="text_personalinfo">Personal Info</string>
    <string name="text_applicant_name">Name of Applicant</string>
    <string name="textemail2">Email</string>
    <string name="textmobile2">Mobile</string>
    <string name="textaddress2">Address</string>
    <string name="text_dummy_mobile">+910000000000</string>
    <string name="text_dummy_email">email@domain.com</string>
    <string name="text_tree_type">Tree Type</string>
    <string name="text_prajati">Prajati</string>
    <string name="text_total">Total</string>
    <string name="text_reason">Reason</string>
    <string name="text_dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry,when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="text_ward">Ward</string>
    <string name="text_department">Department</string>
    <string name="text_treecuttinginfo">Info of Tree Cutting</string>
    <string name="text_document_for_service">Document for Service</string>
    <string name="text_document_point1">1. DOCUMENT RELATED TO OWNERSHIP OF PROPERTY (7 X 12 EXTRACT, PROPERTY CARD, ETC.)</string>
    <string name="text_document_point2">2. DOCUMENT RELATED TO LOCATION OF TREE*</string>
    <string name="text_document_point3">3. PHOTOGRAPHS OF THE TREE*</string>
    <string name="text_document_point4">4. ANY PERMISSION RELATED TO CONSTRUCTION AT SITE (IN CASE TREE CUTTING IS REQUIRED FOR SOME CONSTRUCTION WORK)</string>
    <string name="text_document_point5">5. NOC IN CASE OF JOINT OWNERSHIP OF PROPERTY</string>
    <string name="text_total_application">Total Applications</string>
    <string name="text_total_in_process">Total in Process</string>
    <string name="text_total_due_for_payment">Total due for Payment</string>
    <string name="text_total_in_pending">Total in Pending</string>
    <string name="text_total_completed">Total completed</string>
    <string name="text_department_pendancy">Department wise Pendency</string>
    <string name="text_tree_cutting_permission">Tree Cutting - Permission</string>
    <string name="text_application_in_progress">Application in process</string>
    <string name="text_pending_due_to_payment">Pending due to payment</string>
    <string name="text_total_pending">Total pending</string>
    <string name="text_tree_trimming_permission">Trimming of Branches - Permission</string>
    <string name="text_garden_department">Garden Department</string>
    <string name="text_apply_now">Apply Now</string>
    <string name="text_applicant_name_marathi">Name of Applicant in Marathi</string>
    <string name="text_mobile_no">Mobile No.</string>
    <string name="text_email_id">Email ID</string>
    <string name="text_address">Address</string>
    <string name="text_address_marathi">Address in Marathi</string>
    <string name="text_info_of_tree_cutting">Info of Tree Cutting</string>
    <string name="text_browse">Browse</string>
    <string name="text_select">Select</string>

    <string name="text_appicant_name_in_marathi">अर्जदाराचे नांव</string>
    <string name="text_applicant_address_in_marathi">पत्ता</string>
    <string name="text_service_1">वृक्ष तोडण्यासाठी परवानगी/Tree Cutting Permission</string>
    <string name="text_service_2">फांद्या छाटण्यासाठी परवानगी/Trimming of Branches Permission</string>
    <string name="text_receipt">Receipt</string>
    <string name="text_tree_cutting_receipt">Tree Cutting Receipt</string>
    <string name="text_receipt_no">Receipt No:</string>
    <string name="text_receipt_appId">Application ID:</string>
    <string name="text_receipt_date">Date :</string>
    <string name="text_receipt_payment_place">Receipt Payment Place</string>
    <string name="text_epayment">e-payment</string>
    <string name="text_receipt_appNo">Application No.</string>
    <string name="text_receipt_payment_mode">Payment Mode</string>
    <string name="text_receipt_nocopies">Number of Copies</string>
    <string name="text_receipt_percopy">Per Copy (In Rs.)</string>
    <string name="text_receipt_amount">Amount (In Rs.)</string>
    <string name="text_receipt_latefee">Late Fee (In Rs.)</string>
    <string name="text_note">Note :</string>
    <string name="text_receipt_note1">1. This is computer generated receipt. Signature is not necessary.</string>
    <string name="text_receipt_note2">2. This is valid to Nagpur Munciple Corporation transaction only.</string>
    <string name="text_receipt_gstno">GST Number :</string>
    <string name="text_tree_images">Images of Tree</string>
    <string name="text_send_password_reset_link">Send Password Reset Link</string>
    <string name="text_back_to">Back to</string>
    <string name="text_select_optional">Select (Optional)</string>
</resources>
